--- a/app/globals.css
+++ b/app/globals.css
@@ -6,8 +6,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* @import "@liveblocks/react-ui/styles.css"; */
-/* @import "@liveblocks/react-lexical/styles.css"; */
+@import "@liveblocks/react-ui/styles.css";
+@import "@liveblocks/react-lexical/styles.css";
 
 @import "../styles/dark-theme.css";
 
